# OpenCL_Tests

./: bmpFormat.h  cpu_rgb_conv.h  kernel_rgb_conv.cl  main.cpp  rgb_converter.h
Blockchain/: Block.py  BlockChain.py  Miner.py  ProofFinding.py  SHA256.cl  main.py
IntegralComputation/: Integration.cl  main  main.cpp
MatrixMul/: FastMatrixMul.cl  MatrixMul.cl  main  main.cpp
OpenCL_indexing/: Indexing.cl  main  main.cpp
RGB_conv_openCL/: CMakeLists.txt  cpu_rgb_conv.h  gpu_rgb_conv.h  kernel_rgb_conv.cl  main  main.cpp  rgb_converter.h
RGB_conv_openCL/includes/: bmpFormat.h  configFile.h  cpu_rgb_conv.h  gpu_rgb_conv.h  rgb_converter.h
RGB_conv_openCL/kernels/: kernel_rgb_conv.cl
RGB_conv_openCL/sources/: main.cpp
